Replace the listwidget with a categorized list widget
Now we have favorites, categories and can filter on the
current tool.

--- a/plugins/dockers/toolpresets/WdgToolPresets.ui
+++ b/plugins/dockers/toolpresets/WdgToolPresets.ui
@@ -6,14 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>289</width>
+    <height>399</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="KisCategorizedListView" name="lstPresets"/>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
@@ -33,26 +36,6 @@
        </property>
       </widget>
      </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QListWidget" name="lstPresets"/>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item>
       <widget class="QToolButton" name="bnDelete">
        <property name="text">
@@ -62,8 +45,43 @@
      </item>
     </layout>
    </item>
+   <item>
+    <widget class="QCheckBox" name="chkSaveBrushPresetInformation">
+     <property name="text">
+      <string>Save Current Resources with Preset</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="chkExecuteToolOnSelection">
+     <property name="text">
+      <string>Execute Tool on Selecting this Preset</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="chkCurrentToolOnly">
+     <property name="text">
+      <string>Show Only Presets for Current Tool</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>KisCategorizedListView</class>
+   <extends>QListView</extends>
+   <header>kis_categorized_list_view.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
