Change file/class names of the gradient generator to reflect they are part of a generator

--- a/plugins/generators/gradient/KisGradientGeneratorConfigWidget.ui
+++ b/plugins/generators/gradient/KisGradientGeneratorConfigWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GradientConfigWidget</class>
- <widget class="QWidget" name="GradientConfigWidget">
+ <class>GradientGeneratorConfigWidget</class>
+ <widget class="QWidget" name="GradientGeneratorConfigWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
