--- a/plugins/generators/gradient/KisGradientGeneratorConfigWidget.ui
+++ b/plugins/generators/gradient/KisGradientGeneratorConfigWidget.ui
@@ -6,15 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>399</width>
-    <height>361</height>
+    <width>364</width>
+    <height>225</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
@@ -171,7 +165,7 @@
           <number>5</number>
          </property>
          <property name="verticalSpacing">
-          <number>5</number>
+          <number>10</number>
          </property>
          <item row="0" column="0">
           <widget class="QLabel" name="labelStartPosition">
@@ -181,23 +175,20 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <layout class="QGridLayout" name="gridLayout" rowstretch="0,0" columnstretch="0,1">
+          <layout class="QGridLayout" name="gridLayout" rowstretch="0,0" columnstretch="0,0,1">
            <property name="spacing">
             <number>5</number>
            </property>
-           <item row="1" column="1">
+           <item row="0" column="2">
+            <widget class="QComboBox" name="comboBoxStartPositionXUnits"/>
+           </item>
+           <item row="1" column="2">
             <widget class="QComboBox" name="comboBoxStartPositionYUnits"/>
            </item>
            <item row="0" column="1">
-            <widget class="QComboBox" name="comboBoxStartPositionXUnits"/>
-           </item>
-           <item row="0" column="0">
             <widget class="QDoubleSpinBox" name="spinBoxStartPositionX">
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-             <property name="prefix">
-              <string>X: </string>
              </property>
              <property name="minimum">
               <double>-50000.000000000000000</double>
@@ -210,13 +201,10 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
+           <item row="1" column="1">
             <widget class="QDoubleSpinBox" name="spinBoxStartPositionY">
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-             <property name="prefix">
-              <string>Y: </string>
              </property>
              <property name="minimum">
               <double>-50000.000000000000000</double>
@@ -226,6 +214,26 @@
              </property>
              <property name="value">
               <double>50.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>X:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>Y:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -302,7 +310,7 @@
               <number>0</number>
              </property>
              <widget class="QWidget" name="stackedWidgetPageEndPositionCartesian">
-              <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,1,1">
+              <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,0,1,1">
                <property name="leftMargin">
                 <number>0</number>
                </property>
@@ -318,13 +326,10 @@
                <property name="spacing">
                 <number>5</number>
                </property>
-               <item row="0" column="0">
+               <item row="0" column="1">
                 <widget class="QDoubleSpinBox" name="spinBoxEndPositionX">
                  <property name="alignment">
                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                 </property>
-                 <property name="prefix">
-                  <string>X: </string>
                  </property>
                  <property name="minimum">
                   <double>-50000.000000000000000</double>
@@ -337,13 +342,22 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
+               <item row="0" column="2">
+                <widget class="QComboBox" name="comboBoxEndPositionXUnits"/>
+               </item>
+               <item row="1" column="3">
+                <widget class="QComboBox" name="comboBoxEndPositionYPositioning"/>
+               </item>
+               <item row="0" column="3">
+                <widget class="QComboBox" name="comboBoxEndPositionXPositioning"/>
+               </item>
+               <item row="1" column="2">
+                <widget class="QComboBox" name="comboBoxEndPositionYUnits"/>
+               </item>
+               <item row="1" column="1">
                 <widget class="QDoubleSpinBox" name="spinBoxEndPositionY">
                  <property name="alignment">
                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                 </property>
-                 <property name="prefix">
-                  <string>Y: </string>
                  </property>
                  <property name="minimum">
                   <double>-50000.000000000000000</double>
@@ -356,17 +370,25 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="1">
-                <widget class="QComboBox" name="comboBoxEndPositionYUnits"/>
+               <item row="0" column="0">
+                <widget class="QLabel" name="label_3">
+                 <property name="text">
+                  <string>X:</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
+                </widget>
                </item>
-               <item row="0" column="1">
-                <widget class="QComboBox" name="comboBoxEndPositionXUnits"/>
-               </item>
-               <item row="0" column="2">
-                <widget class="QComboBox" name="comboBoxEndPositionXPositioning"/>
-               </item>
-               <item row="1" column="2">
-                <widget class="QComboBox" name="comboBoxEndPositionYPositioning"/>
+               <item row="1" column="0">
+                <widget class="QLabel" name="label_4">
+                 <property name="text">
+                  <string>Y:</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
+                </widget>
                </item>
               </layout>
              </widget>
@@ -391,17 +413,24 @@
                 <widget class="KisDoubleSliderSpinBox" name="sliderEndPositionAngle" native="true"/>
                </item>
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,1">
+                <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,1">
                  <property name="spacing">
                   <number>5</number>
                  </property>
                  <item>
-                  <widget class="QDoubleSpinBox" name="spinBoxEndPositionDistance">
+                  <widget class="QLabel" name="label_5">
+                   <property name="text">
+                    <string>Distance:</string>
+                   </property>
                    <property name="alignment">
                     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                    </property>
-                   <property name="prefix">
-                    <string>Distance: </string>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QDoubleSpinBox" name="spinBoxEndPositionDistance">
+                   <property name="alignment">
+                    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                    </property>
                    <property name="minimum">
                     <double>-50000.000000000000000</double>
