add cursors for mesh transform

--- a/plugins/tools/tool_transform2/tool_transform.qrc
+++ b/plugins/tools/tool_transform2/tool_transform.qrc
@@ -1,6 +1,8 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource>
+        <file>mesh_cursor_free.png</file>
+        <file>mesh_cursor_locked.png</file>
         <file>rotate_cursor.xpm</file>
         <file>shear_cursor.png</file>
     </qresource>
