--- a/krita/pics/svg/svg-icons.qrc
+++ b/krita/pics/svg/svg-icons.qrc
@@ -165,5 +165,7 @@
         <file>light_bundle_archive.svg</file>
         <file>dark_python.svg</file>
         <file>light_python.svg</file>
+        <file>dark_hamburger_menu_dots.svg</file>
+        <file>light_hamburger_menu_dots.svg</file>
     </qresource>
 </RCC>
