--- a/plugins/dockers/toolpresets/WdgToolPresets.ui
+++ b/plugins/dockers/toolpresets/WdgToolPresets.ui
@@ -20,21 +20,17 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Preset Name:</string>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="txtName"/>
-     </item>
-     <item>
-      <widget class="QToolButton" name="bnSave">
-       <property name="text">
-        <string>...</string>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
        </property>
-      </widget>
+      </spacer>
      </item>
      <item>
       <widget class="QToolButton" name="bnDelete">
@@ -43,35 +39,14 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QToolButton" name="bnAdd">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="chkSaveBrushPresetInformation">
-     <property name="text">
-      <string>Save Current Resources with Preset</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="chkExecuteToolOnSelection">
-     <property name="text">
-      <string>Execute Tool on Selecting this Preset</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="chkCurrentToolOnly">
-     <property name="text">
-      <string>Show Only Presets for Current Tool</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
