Enable localized news on welcome widget with language selection
The language list is currently hard-coded with a list of languages in
which the news items should be regularly translated into as of
2020-11-07.

--- a/libs/ui/forms/KisWelcomePage.ui
+++ b/libs/ui/forms/KisWelcomePage.ui
@@ -1484,6 +1484,13 @@
              </item>
             </layout>
            </item>
+           <item>
+           <widget class="QPushButton" name="btnNewsLang">
+           <property name="text">
+           <string comment="News language selection">Lang</string>
+           </property>
+           </widget>
+           </item>
           </layout>
          </item>
          <item>
