--- a/krita/data/cursors/cursors.qrc
+++ b/krita/data/cursors/cursors.qrc
@@ -1,4 +1,8 @@
 <!DOCTYPE RCC>
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC version="1.0">
     <qresource>
         <file>color-picker_image_background.xpm</file>
