--- a/krita/krita.qrc
+++ b/krita/krita.qrc
@@ -1,3 +1,7 @@
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC>
     <qresource prefix="/kconfig">
         <file alias="kritarc">data/kritarc</file>
