--- a/krita/pics/misc-light/misc-light-icons.qrc
+++ b/krita/pics/misc-light/misc-light-icons.qrc
@@ -1,3 +1,7 @@
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC>
     <qresource prefix="/">
         <file>light_draw-eraser.svg</file>
