--- a/krita/pics/paintops/paintops-icons.qrc
+++ b/krita/pics/paintops/paintops-icons.qrc
@@ -1,4 +1,8 @@
 <!DOCTYPE RCC>
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC version="1.0">
     <qresource>
         <file alias="dark_hairybrush.svg">dark_bristlebrush.svg</file>
