--- a/krita/pics/tool_transform/tool-transform-icons.qrc
+++ b/krita/pics/tool_transform/tool-transform-icons.qrc
@@ -1,3 +1,7 @@
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC>
     <qresource prefix="/">
         <file>dark_transform_icons_cage.svg</file>
