--- a/libs/resources/sql.qrc
+++ b/libs/resources/sql.qrc
@@ -1,3 +1,7 @@
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC>
     <qresource prefix="/">
         <file alias="create_version_information.sql">sql/create_version_information.sql</file>
