--- a/libs/widgets/kritawidgets.qrc
+++ b/libs/widgets/kritawidgets.qrc
@@ -1,4 +1,8 @@
 <!DOCTYPE RCC>
+<!--
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+-->
 <RCC version="1.0">
     <qresource>
         <file>pics/dark_docker_close.png</file>
