Disambiguate the gradient editor

--- a/plugins/generators/gradient/KisGradientGeneratorConfigWidget.ui
+++ b/plugins/generators/gradient/KisGradientGeneratorConfigWidget.ui
@@ -170,7 +170,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="labelStartPosition">
            <property name="text">
-            <string>Start:</string>
+            <string comment="Start position of the gradient">Start:</string>
            </property>
           </widget>
          </item>
@@ -242,7 +242,7 @@
          <item row="1" column="0">
           <widget class="QLabel" name="labelEndPosition">
            <property name="text">
-            <string>End:</string>
+            <string comment="End position of the gradient">End:</string>
            </property>
           </widget>
          </item>
