Implement a GUI option for flipping the "symmetrical" mode for mesh handles
It looks like different painters expect different default behavior from
the mesh handles. The new checkbox in the mesh mode options will let them
choose what behavior should be without any modifier.

# Conflicts:
#	plugins/tools/tool_transform2/tool_transform_args.cc
#	plugins/tools/tool_transform2/tool_transform_args.h

--- a/plugins/tools/tool_transform2/wdg_tool_transform.ui
+++ b/plugins/tools/tool_transform2/wdg_tool_transform.ui
@@ -2191,6 +2191,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="chkSymmetricalHandles">
+         <property name="text">
+          <string>Lock handles symmetrically</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer_4">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -2306,8 +2313,8 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
-  <buttongroup name="cageTransformButtonGroup"/>
   <buttongroup name="freeTransformRadioGroup"/>
+  <buttongroup name="cageTransformButtonGroup"/>
+  <buttongroup name="buttonGroup"/>
  </buttongroups>
 </ui>
