New Animation Curves Docker GUI.
See MR601 for a full list of details, but this reinvention should
help smooth out scalar animation workflows.

--- a/krita/pics/svg/svg-icons.qrc
+++ b/krita/pics/svg/svg-icons.qrc
@@ -167,5 +167,7 @@
         <file>light_python.svg</file>
         <file>dark_hamburger_menu_dots.svg</file>
         <file>light_hamburger_menu_dots.svg</file>
+        <file>dark_zoom-fit-curve.svg</file>
+        <file>light_zoom-fit-curve.svg</file>
     </qresource>
 </RCC>
