Rename "Show control points" into "Show handles"
According to the painters this wording is more understandable to them

--- a/plugins/tools/tool_transform2/wdg_tool_transform.ui
+++ b/plugins/tools/tool_transform2/wdg_tool_transform.ui
@@ -2186,7 +2186,7 @@
        <item>
         <widget class="QCheckBox" name="chkShowControlPoints">
          <property name="text">
-          <string>Show control points</string>
+          <string>Show handles</string>
          </property>
         </widget>
        </item>
